web ui working, generates story with basic TTS.

--- a/webapp/templates/actualization.html
+++ b/webapp/templates/actualization.html
@@ -47,10 +47,11 @@
         {% endfor %}
 
         <div class="navigation-buttons">
-            <button type="button" class="back-button" id="back-to-core-vision">Go Back</button>
-            <button type="button" class="reset-button" id="start-over">Start Over</button>
-            <button type="button" class="next-button" id="next">
-                Next
+            <button type="button" class="next-button" id="back-to-core-vision">
+                Back to Core Vision
+            </button>
+            <button type="submit" class="next-button" id="submit-actualization">
+                Next: Generate Story
             </button>
         </div>
     </form>
